--- a/APPD/APPD.csproj
+++ b/APPD/APPD.csproj
@@ -154,8 +154,8 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="Assets\SimulatedServer\Database\AccountsJson.json" />
-    <None Include="Assets\SimulatedServer\Database\UsersJson.json" />
+    <None Include="Assets\SimulatedServer\Database\Accounts.json" />
+    <None Include="Assets\SimulatedServer\Database\Users.json" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
