--- a/APPD/APPD.csproj
+++ b/APPD/APPD.csproj
@@ -176,6 +176,21 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <Resource Include="Assets\SimulatedServer\Assets\Images\Accounts\7.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\SimulatedServer\Assets\Images\Accounts\8.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\SimulatedServer\Assets\Images\Users\4.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\SimulatedServer\Assets\Images\Users\5.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\SimulatedServer\Assets\Images\Users\6.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Content Include="Assets\SimulatedServer\Database\Accounts.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
